--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li class="nav__item"><a href="" class="nav__link">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="nav nav__space">
+            <ul class="nav nav--space">
                 <li class="nav__item">
                     <a href="mailto:info@devstudio.com" class="nav__link--rigth ">
                         <svg width="16" height="12" class="nav__icon">
@@ -44,7 +44,7 @@
                 <button type="button" data-modal-open class="hero__button">Замовити послугу</button>
             </div>
         </section>
-        <section class="section section-features">
+        <section class="section section--features">
             <div class="container">
                 <h2 class="visually-hidden">Наші Переваги</h2>
                 <ul class="features">
@@ -90,7 +90,7 @@
         <section class="section">
             <div class="container">
                 <h2 class="section__title">Чим ми займаємося</h2>
-                <ul class="inline-list">
+                <ul class="inline-list wedo">
                     <li>
                         <div class="wedo__thumb">
                         <img src="./images/what-we-do-1.jpg" width="370" alt="Робота за комп`ютером">
@@ -112,40 +112,40 @@
                 </ul>
             </div>
         </section>
-        <section class="section team">
+        <section class="section section--team">
             <div class="container">
                 <h2 class="section__title">Наша команда</h2>
-                <ul class="inline-list">
+                <ul class="inline-list team">
                     <li class="team__card">
                         <img src="./images/team-1.jpg" width="270" alt="Ігор Дем'яненко">
                         <div class="team__desc">
                             <h3 class="team__title">Ігор Дем'яненко</h3>
                             <p class="team__text">Product Designer</p>
-                            <ul class="team__socials">
+                            <ul class="social">
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-insta"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-fb"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-linked"></use>
                                         </svg>
                                     </a>
@@ -158,31 +158,31 @@
                         <div class="team__desc">
                             <h3 class="team__title">Ольга Рєпіна</h3>
                             <p class="team__text">Frontend Developer</p>
-                            <ul class="team__socials">
+                            <ul class="social">
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-insta"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-fb"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-linked"></use>
                                         </svg>
                                     </a>
@@ -195,31 +195,31 @@
                         <div class="team__desc">
                             <h3 class="team__title">Микола Тарасов</h3>
                             <p class="team__text">Marketing</p>
-                            <ul class="team__socials">
+                            <ul class="social">
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-insta"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-fb"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-linked"></use>
                                         </svg>
                                     </a>
@@ -232,31 +232,31 @@
                         <div class="team__desc">
                             <h3 class="team__title">Михайло Єрмаков</h3>
                             <p class="team__text">UI Designer</p>
-                            <ul class="team__socials">
+                            <ul class="social">
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-insta"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-fb"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="" class="team__social-link" target="_blank" rel="noopener noreferrer">
-                                        <svg class="social-icon">
+                                    <a href="" class="social__link" target="_blank" rel="noopener noreferrer">
+                                        <svg class="social__icon">
                                             <use href="./images/icons.svg#social-linked"></use>
                                         </svg>
                                     </a>
@@ -333,32 +333,32 @@
                     </address>
                 </div>
                 <div class="footer-2">
-                    <h3 class="team__title"><span class="logo__accent--bottom uppercase">Приєднуйтесь</span></h3>
+                    <p class="team__title"><span class="logo__accent--bottom uppercase">Приєднуйтесь</span></p>
                     <ul class="footer-socials">
                         <li> 
-                            <a href="" class="footer__social-item">
-                                <svg class="social-icon">
+                            <a href="" class="social__link--footer">
+                                <svg class="social__icon">
                                     <use href="./images/icons.svg#social-insta"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="footer__social-item">
-                                <svg class="social-icon">
+                            <a href="" class="social__link--footer">
+                                <svg class="social__icon">
                                     <use href="./images/icons.svg#social-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="" class="footer__social-item">
-                                <svg class="social-icon">
+                            <a href="" class="social__link--footer">
+                                <svg class="social__icon">
                                     <use href="./images/icons.svg#social-fb"></use>
                                 </svg>
                              </a>
                         </li>
                         <li>
-                            <a href="" class="footer__social-item">
-                                <svg class="social-icon">
+                            <a href="" class="social__link--footer">
+                                <svg class="social__icon">
                                     <use href="./images/icons.svg#social-linked"></use>
                                 </svg>
                             </a>
@@ -366,9 +366,9 @@
                     </ul>
                 </div>
                 <div>
-                    <h3 class="team__title"><span class="logo__accent--bottom uppercase">Підпишіться на розсилку</span></h3>
-                    <form name="footer-newsletter" autocomplete="off">
-                        <div class="newsletter__form">
+                    <p class="team__title"><span class="logo__accent--bottom uppercase">Підпишіться на розсилку</span></p>
+                    <form name="newsletter" autocomplete="off">
+                        <div class="newsletter">
                             <input type="email" name="email" class="newsletter__input" placeholder="E-mail" />
                             <button type="submit" class="newsletter__button">Підписатися
                                 <svg width="24" height="24" class="newsletter__icon">
@@ -419,10 +419,9 @@
                     Погоджуюся з розсилкою та приймаю &nbsp;<a href="" class="modal__link" target="_blank">Умови договору</a>
                     </label>
                 </div>
-                <div class="modal__button--centered">
-                    <button type="submit" class="modal__button">Відправити</button>
-                </div>
+                
               </form>
+              <button type="submit" class="modal__button">Відправити</button>
             </div>
         </div>
     </div>
