--- a/portfolio.html
+++ b/portfolio.html
@@ -178,7 +178,7 @@
                         </ul>
                     </address>
                 </div>
-                <div class="footer-2">
+                <div class="footer--spacing">
                     <p class="team__title"><span class="logo__accent--bottom uppercase">Приєднуйтесь</span></p>
                     <ul class="footer-socials">
                         <li> 
