--- a/index.html
+++ b/index.html
@@ -270,45 +270,45 @@
         <section class="section">
             <div class="container">
                 <h2 class="section__title">Постійні клієнти</h2>
-                <ul class="inline-list">
+                <ul class="inline-list client">
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use href="./images/icons.svg#client-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use href="./images/icons.svg#client-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use href="./images/icons.svg#client-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use href="./images/icons.svg#client-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use href="./images/icons.svg#client-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a href="" class="client__link">
-                            <svg class="icon icon-client">
+                            <svg class="icon client__icon">
                                 <use xlink:href="./images/icons.svg#client-6"></use>
                             </svg>
                         </a>
@@ -332,9 +332,9 @@
                         </ul>
                     </address>
                 </div>
-                <div class="footer--spacing">
+                <div class="footer footer--spacing">
                     <p class="team__title"><span class="logo__accent--bottom uppercase">Приєднуйтесь</span></p>
-                    <ul class="footer-socials">
+                    <ul class="social social--footer">
                         <li> 
                             <a href="" class="social__link--footer">
                                 <svg class="social__icon">
