Homework 7 changes 2, fixes for Portfolio page footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,9 +178,9 @@
                         </ul>
                     </address>
                 </div>
-                <div class="footer--spacing">
+                <div class="footer footer--spacing">
                     <p class="team__title"><span class="logo__accent--bottom uppercase">Приєднуйтесь</span></p>
-                    <ul class="footer-socials">
+                    <ul class="social social--footer">
                         <li> 
                             <a href="" class="social__link--footer">
                                 <svg class="social__icon">
